discussion/kv_engine/170541/170541_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-14 09:23:47.000000000
Message: 
Uploaded patch set 12: Patch Set 11 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-14 09:47:59.000000000
Message: 
Patch Set 12: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5288/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5288/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17318/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17624/ : ABORTED

Failure of GoogleTest "TransportProtocols/WithMetaTest.MB36304_DocumetTooBig/McbpSsl_XattrNo_JsonYes_SnappyNo":

<pre>
[ RUN      ] TransportProtocols/WithMetaTest.MB36304_DocumetTooBig/McbpSsl_XattrNo_JsonYes_SnappyNo
[2022-02-14T09:47:46.428Z] unknown file: Failure
[2022-02-14T09:47:46.428Z] C++ exception with description "EOF: Connection reset by peer" thrown in SetUp().
[2022-02-14T09:47:46.428Z] [  FAILED  ] TransportProtocols/WithMetaTest.MB36304_DocumetTooBig/McbpSsl_XattrNo_JsonYes_SnappyNo, where GetParam() = (McbpSsl, XattrNo, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>) (0 ms)
TransportProtocols/WithMetaTest.MB36304_DocumetTooBig/McbpSsl_XattrNo_JsonYes_SnappyNo
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17624/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17624/ )

Test exceeded the timeout:
[2022-02-14T09:47:47.112Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17624/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25724/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25724/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15579/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15579/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15579/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43890/ : FAILURE

Failure of GoogleTest "FullAndValueEvictionOnReplicaAndPending/RollbackDcpTest.RollbackCommitOnTopOfSyncWrite/persistent_magma_value_only_pending":

<pre>
[ RUN      ] FullAndValueEvictionOnReplicaAndPending/RollbackDcpTest.RollbackCommitOnTopOfSyncWrite/persistent_magma_value_only_pending
unknown file: error: C++ exception with description "KVStoreFactory ctor: Specified dbname "ep_engine_ep_unit_tests.db/test.263501" is not a directory" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] FullAndValueEvictionOnReplicaAndPending/RollbackDcpTest.RollbackCommitOnTopOfSyncWrite/persistent_magma_value_only_pending, where GetParam() = ("persistent_magma", "value_only", "pending") (6 ms)
FullAndValueEvictionOnReplicaAndPending/RollbackDcpTest.RollbackCommitOnTopOfSyncWrite/persistent_magma_value_only_pending
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43890/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18356/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18356/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37006/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5227/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16396/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
